# ionics_fits

./: .flake8  .gitignore  README.md  changes.md  pyproject.toml
.github/workflows/: docs.yml  package.yml  test.yml
docs/: Makefile  api.rst  changes.md  conf.py  containers.rst  contributing.rst  design_philosophy.rst  getting_started.rst  index.rst  multi_x.rst  testing.rst  transformations.rst  utils.rst  validators.rst
fits/: __init__.py  common.py  lsq.py  normal.py  utils.py
fits/models/: __init__.py  polynomial.py  utils.py
ionics_fits/: MLE.py  __init__.py  binomial.py  common.py  errorbars.py  normal.py  utils.py  validators.py
ionics_fits/models/: __init__.py  aggregate_model.py  benchmarking.py  cone.py  containers.py  exponential.py  gaussian.py  heuristics.py  laser_flop.py  laser_rabi.py  lorentzian.py  molmer_sorensen.py  multi_x.py  polynomial.py  quantum_phys.py  rabi.py  ramsey.py  rectangle.py  sigmoid.py  sinc.py  sinusoid.py  staircase.py  thermometry.py  triangle.py  utils.py
ionics_fits/models/containers/: __init__.py  aggregate_model.py  mapped_model.py  model_2d.py  reparametrized_model.py  repeated_model.py  scaled_model.py
ionics_fits/models/transformations/: __init__.py  aggregate_model.py  mapped_model.py  model_2d.py  reparametrized_model.py  repeated_model.py  scaled_model.py
ionics_fits/multi_x/: __init__.py  common.py  models.py
test/: common.py  conftest.py  fuzz.py  test_aggregate_model.py  test_benchmarking.py  test_binomial.py  test_call.py  test_cone.py  test_cov.py  test_exponential.py  test_fitter_2d.py  test_gaussian.py  test_laser_flop.py  test_lorentzian.py  test_molmer_sorensen.py  test_multi_x.py  test_multi_y.py  test_multi_y_channels.py  test_polynomial.py  test_rabi.py  test_ramsey.py  test_rectangle.py  test_repeated_model.py  test_scaled_model.py  test_sigmoid.py  test_sinc.py  test_sinusoid.py  test_thermometry.py  test_triangle.py  test_validators.py
test/regression/: test_161.py  test_170.py
