[tool.poetry]
name = "ionics-fits"
version = "0.1"
description = "Lightweight Python data fitting library with an emphasis on AMO/Quantum Information"
authors = ["hartytp <thomas.peter.harty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.21.2"
scipy = "^1.7.1"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
poethepoet = "^0.12.1"
flake8 = "^4.0.1"
black = "^22.6.0"
pyqt5 = "^5.15.9"
pyqt5-qt5 = "^5.15.2, <5.15.11" # no windows wheels for 5.15.11 as of 24/10/2023
matplotlib = "^3.5.3"
pytype = {version = "^2022.4.15", markers = "os_name == 'posix'"}

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.poe.tasks]
test = "pytest"
fmt-test = "black --check ."
fmt = "black ."
flake = "flake8 ."
fuzz = "python -m test.fuzz"
types = { script = "run_pytype:main" }
