[tool.poetry]
name = "ionics-fits"
version = "0.1"
description = "Lightweight Python data fitting library with an emphasis on AMO/Quantum Information"
authors = ["hartytp <thomas.peter.harty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.21.2, <3.0"
scipy = "^1.7.1"
statsmodels = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
poethepoet = "^0.24.4"
ruff = "^0.7.3"
pyqt5 = "^5.15.9"
pyqt5-qt5 = "^5.15.2, <5.15.11" # no windows wheels for 5.15.11 as of 24/10/2023
matplotlib = "^3.5.3"
# pytype behaviour is not stable between versions. Pin to a specific version.
pytype = { version = "2024.10.11", markers = "os_name == 'posix'" }
sphinx = "^6.0"
sphinx-rtd-theme = "^1.2.0"
sphinx-mdinclude = "^0.5.3"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.poe.tasks]
test = "pytest"
fmt-test = "ruff format --check ."
fmt = "ruff format"
lint = "ruff check"
fuzz = "python -m test.fuzz"
types = { script = "run_pytype:main" }
docs = { cwd = "./docs", cmd = "make html doctest" }
docs-clean = { cwd = "./docs", cmd = "make clean" }

[tool.ruff]
exclude = ["scratch", ".git", "__pycache__", ".venv"]

indent-width = 4
line-length = 88
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__ files for re-exporting
"__init__.py" = ["F401"]
